[gd_scene load_steps=4 format=2]

[ext_resource path="res://Units/Basic/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/Basic/MeleeUnit.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.32212, 4.69782, 2.42841 )

[node name="Unit" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Body" parent="." index="1"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.55, 0 )

[node name="HitArea" type="Area" parent="Body" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.8392 )

[node name="CollisionShape" type="CollisionShape" parent="Body/HitArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.74796 )
shape = SubResource( 1 )

[node name="AttackDelayTimer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="body_entered" from="Body/HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_exited" from="Body/HitArea" to="." method="_on_HitArea_body_exited"]
[connection signal="timeout" from="AttackDelayTimer" to="." method="_on_AttackDelayTimer_timeout"]
